Fixed some minor layout issues to the swiping page

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,7 @@
 
 .profile__content{
     height: auto;
+    padding-top: 1.5rem;
 }
 
 .profile__card-cont {
